--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --watch --colors",
+    "build": "webpack --production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
